--- a/spring-boot-doma-sample/build.gradle
+++ b/spring-boot-doma-sample/build.gradle
@@ -33,6 +33,8 @@ repositories {
 
 
 dependencies {
+    compile('org.flywaydb:flyway-core')
+    compile('org.springframework.boot:spring-boot-starter-thymeleaf')
     compile('org.springframework.boot:spring-boot-starter-jdbc')
 	compile('org.springframework.boot:spring-boot-starter-web')
     runtime('org.springframework.boot:spring-boot-devtools')
