--- a/spring-boot-jasper-sample/pom.xml
+++ b/spring-boot-jasper-sample/pom.xml
@@ -35,6 +35,12 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/net.sf.jasperreports/jasperreports -->
+		<dependency>
+    		<groupId>net.sf.jasperreports</groupId>
+   			<artifactId>jasperreports</artifactId>
+    		<version>6.4.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
